WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79897
[BlackBerry] Web Notification crashes the browser.
https://bugs.webkit.org/show_bug.cgi?id=79897
Summary
[BlackBerry] Web Notification crashes the browser.
Charles Wei
Reported
2012-02-29 01:58:03 PST
Web Notification crashes the browser at permission dialog and after click on the notification. Internal PR: 140936
Attachments
Patch which is internally reviewed by Robin Qiu.
(3.25 KB, patch)
2012-02-29 02:56 PST
,
Charles Wei
tonikitoo
: commit-queue-
Details
Formatted Diff
Diff
patch-v2 with more info about the patch
(4.15 KB, patch)
2012-02-29 19:31 PST
,
Charles Wei
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Charles Wei
Comment 1
2012-02-29 02:56:12 PST
Created
attachment 129426
[details]
Patch which is internally reviewed by Robin Qiu. Internally reviewed and approved by Roin Qiu.
Antonio Gomes
Comment 2
2012-02-29 08:40:59 PST
Comment on
attachment 129426
[details]
Patch which is internally reviewed by Robin Qiu. View in context:
https://bugs.webkit.org/attachment.cgi?id=129426&action=review
> Source/WebKit/blackberry/ChangeLog:11 > + [BlackBerry] Web Notification crashes the browser. > +
https://bugs.webkit.org/show_bug.cgi?id=79897
> + > + Reviewed by NOBODY (OOPS!). > + > + * WebCoreSupport/NotificationPresenterImpl.cpp: > + (WebKit::NotificationPresenterImpl::onPermission): > + (WebKit::NotificationPresenterImpl::notificationClicked): > +
mind to explain what your patch does, how it fixes the crash, what was the cause, how to test, etc?
Charles Wei
Comment 3
2012-02-29 19:31:36 PST
Created
attachment 129615
[details]
patch-v2 with more info about the patch
WebKit Review Bot
Comment 4
2012-02-29 21:39:28 PST
Comment on
attachment 129615
[details]
patch-v2 with more info about the patch
Attachment 129615
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/11769184
New failing tests: fast/workers/storage/use-same-database-in-page-and-workers.html
Leo Yang
Comment 5
2012-02-29 21:43:57 PST
(In reply to
comment #4
)
> (From update of
attachment 129615
[details]
) >
Attachment 129615
[details]
did not pass chromium-ews (chromium-xvfb): > Output:
http://queues.webkit.org/results/11769184
> > New failing tests: > fast/workers/storage/use-same-database-in-page-and-workers.html
Seems not related to this patch. Letting cq try again.
WebKit Review Bot
Comment 6
2012-03-01 03:39:05 PST
Comment on
attachment 129615
[details]
patch-v2 with more info about the patch Rejecting
attachment 129615
[details]
from commit-queue. New failing tests: fast/workers/storage/use-same-database-in-page-and-workers.html Full output:
http://queues.webkit.org/results/11751349
WebKit Review Bot
Comment 7
2012-03-01 05:20:21 PST
Comment on
attachment 129615
[details]
patch-v2 with more info about the patch Rejecting
attachment 129615
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/11766448
WebKit Review Bot
Comment 8
2012-03-01 06:43:38 PST
Comment on
attachment 129615
[details]
patch-v2 with more info about the patch Rejecting
attachment 129615
[details]
from commit-queue. New failing tests: fast/workers/storage/use-same-database-in-page-and-workers.html Full output:
http://queues.webkit.org/results/11751427
WebKit Review Bot
Comment 9
2012-03-01 17:27:50 PST
Comment on
attachment 129615
[details]
patch-v2 with more info about the patch Rejecting
attachment 129615
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: FLICT (content): Merge conflict in Source/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 Remove last ENABLED(INDEXED_DATABASE) ifdef from WebCore proper When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output:
http://queues.webkit.org/results/11776690
Adam Barth
Comment 10
2012-03-01 17:57:10 PST
Comment on
attachment 129615
[details]
patch-v2 with more info about the patch Clearing flags on attachment: 129615 Committed
r109475
: <
http://trac.webkit.org/changeset/109475
>
Adam Barth
Comment 11
2012-03-01 17:57:16 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug